-Profile pic now polaroid style -Footer gap fixed

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,8 +11,10 @@ body,html{
 
 /*Removes space occuring between footer and body*/
 footer{
-  margin-top: -1.2%;
-  padding-top: -10px;
+     position: relative;
+     z-index: 1;
+     height: 2.5em;
+     margin-top: -2.5em;
 }
 
 /*Main navigation bar*/
@@ -139,6 +141,9 @@ hr{
 /*Potfolio page - Profile pic size*/
 .profile{
   max-height: 200px;
+  padding-left: 5px;
+  padding-top: 5px;
+  padding-right: 5px;
 }
 
 /*Potfolio page - Description bio styles*/
@@ -163,7 +168,7 @@ hr{
   position: relative;
   color: black;
   background: radial-gradient(#DEDDEB, #c6c9db 75%);
-  min-height: 95%;
+  min-height: 98%;
   height: auto;
   z-index: 1;
 }
